# dancer_gazebosim

./: ReadMe.md  test.md
src/gazebo_env/: CMakeLists.txt  package.xml
src/gazebo_env/launch/: add_robot.launch.py  env.launch.py
src/gazebo_env/model/: humanoid.sdf  humanoid.urdf  robocup_world.sdf  robot.sdf
src/gazebo_env/model/meshes/: left_arm.STL  left_hand.STL  left_shoulder.STL  right_arm.STL  right_hand.STL  right_shoulder.STL
src/motion_controller/: CMakeLists.txt  Planner.h  package.xml
src/motion_controller/config/: motion_hub_param.yaml
src/motion_controller/config/climb_param/: back_climb.txt  back_climb_old.txt  forward_climb.txt  forward_climb_old.txt
src/motion_controller/config/walk_param/: foot_z.yaml
src/motion_controller/include/: Climb.h  ForwardKinematics.h  IO.h  InverseKinematics.h  MotionController.h  NewMotion.h  OneFootLanding.h  Parameters.h  PendulumWalk.h  Planner.h  ThreeInterpolation.h
src/motion_controller/include/Utility/: dmotion_math.hpp
src/motion_controller/src/: Climb.cpp  ForwardKinematics.cpp  IO.cpp  InverseKinematics.cpp  MotionController.cpp  NewMotion.cpp  OneFootLanding.cpp  Parameters.cpp  PendulumWalk.cpp  Planner.cpp  ThreeInterpolation.cpp  main.cpp
src/motion_controller/src/sim_env/: joint_reader.cpp  simulation.cpp
